style/gamer.css
  /* Work sans font form google fonts */
  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Work+Sans:wght@400;500;600;700;800&display=swap');

  * {
      font-family: 'Lato', sans-serif;
      font-family: 'Work Sans', sans-serif;
      margin: 0;
      padding: 0;
      /* overflow-x: hidden; */
  }

  /* common shared style start */
  .common-title {
      color: #0B0223;
      font-size: 2.8rem;
      font-weight: 700;
  }

  .common-title-color {
      color: #E84BBC;
  }

  .common-description {
      color: #534C64;
      font-size: 1rem;
      line-height: 25px;
      margin-top: 30px;
  }

  .common-btn {
      background-color: #FF42A5;
      border: none;
      border-radius: 25px;
      color: white;
      padding: 15px 25px;
      margin: 30px 0;
      font-size: 1.12rem;
      font-weight: 500;

  }

  /* Nav section style start */
  .nav-section {
      display: flex;
      justify-content: space-around;
      align-items: center;
      background: #FFF;
      box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
      padding: 35px 0;
  }

  .logo-text {
      display: flex;
      justify-content: space-between;
      align-items: center;
  }

  .logo {
      width: 86.041px;
      height: 40px;
  }

  .main-title {
      color: #0B0223;
      font-size: 2.8rem;
      font-weight: 700;
      margin-left: 10px;
  }

  .main-title span {
      color: #FF42A5;
  }

  .menu-items {
      display: flex;
      align-items: center;
      gap: 20px;
  }

  .menu-items a {
      text-decoration: none;
      color: #3C354F;
      text-align: center;
      font-size: 1.12rem;
      font-weight: 500;
  }

  .follow {
      border-radius: 8px;
      background-color: rgba(11, 2, 35, 0.10);
      padding: 10px 20px;
  }

  .fa-youtube {
      color: red;
      margin: 0 5px;
  }

  /* Nav section style end */

  /* banner section related style start */
  .banner-container {
      display: flex;
      justify-content: space-between;
  }

  .banner-content {
      background-image: url(/images/Group\ 14.png);
      padding: 100px 300px 80px 100px;
  }

  .banner-sub-title {
      color: #0B0223;
      text-align: center;
      font-size: 2.8rem;
      font-weight: 600;
      text-transform: uppercase;
  }

  .banner-goat {
      text-align: center;
      font-size: 6rem;
      font-weight: 800;
      text-transform: uppercase;
      color: #E84BBC;
  }

  .banner-description {
      color: #534C64;
      font-size: 1.125rem;
      font-weight: 500;
      text-transform: lowercase;
      line-height: 1.5;
      margin-left: 25px;
  }

  .btn-two-banner {
      background-color: #4EC5F7;
      margin-left: 20px;
  }

  .banner-image-container {
      padding-right: 50px;
  }

  .banner-image {
      width: 100%;
  }

  /* banner section related style end */

  /* Online game section style start */
  .online-game {
      width: 80%;
      margin: 100px auto;
  }

  .online-h-p {
      text-align: center;
  }

  .online-h-p h2 span {
      color: #E84BBC;
  }

  .online-h-p p {
      margin-top: 10px;
  }

  .online-card-container {
      display: flex;
      justify-content: space-evenly;
  }

  .online-card {
      margin: 40px 0 30px;
  }

  .online-card,
  .image {
      width: 95%;
  }

  .online-card p {}

  /* Online game section style end */

  /* play section style start */
  .play-container {
      width: 80%;
      margin: 0 auto;
      display: flex;
      gap: 40px;
  }

  .play-content-container {
      display: flex;
      align-items: center;
  }

  .play-content {
      width: 75%;
  }

  .play-image-container {}

  .paly-image {
      width: 100%;
      /* max-width: 550px;
    max-height: 650px; */
  }

  .play-small-image {
      width: 50%;
      /* width: 250px;
    height: 300px; */
      flex-shrink: 0;
      position: relative;
      top: -200px;
      left: -120px;
  }

  /* play section style end */

  /* icon section style start */
  .icon-container {
      width: 90%;
      margin: 0 auto 60px auto;
      display: grid;
      grid-template-columns: repeat(5, 1fr);
      row-gap: 25px;
      column-gap: 3px;
  }

  .icon-box {
      display: flex;
      align-items: center;
      gap: 10px;
      border: none;
      transition: border linear;
  }
  .icon-box:hover {
    border: 2px solid #FF42A5;
    border-radius: 25px;
  }

  .icon-title {
      color: #0B0223;
      font-size: 1.125rem;
      font-weight: 600;
      padding: 15px;
  }
  .icon-title:hover{
    color: #FF42A5;
  }


  /* icon section style end */

  /* footer related style start */
  .footer-section {
      background-color: #0B0223;
      height: 600px;
      display: flex;
      justify-content: center;
      align-items: center;
  }

  .footer-container {}

  .footer-logo-text {
      display: flex;
      justify-content: center;
      align-items: center;
      padding-top: 20px;
  }

  .footer-logo-text h1 {
      color: white;
  }

  .footer-list {
      margin-top: 20px;
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: center;
  }

  .footer-list a {
      text-decoration: none;
      color: #FFF;
      font-size: 1.1rem;
      font-weight: 600;
      padding: 10px 20px;
      
  }

  .footer-icon-list {
      text-align: center;
      /* margin-top: 40px; */
      display: flex;
      align-items: center;
      justify-content: center;
      flex-wrap: wrap;
  }

  .footer-icon-list a {
      text-decoration: none;
      color: white;
      font-size: 2rem;
      padding: 20px 40px;
  }

  .footer-second-list {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
      margin-top: 30px;
  }

  .footer-second-list a {
      text-decoration: none;
      color: #AFAFAF;
      padding: 20px;

  }

  .copy {
      color: rgba(255, 255, 255, 0.60);
      text-align: center;
      font-weight: 500;
      margin-top: 20px;
  }

  /* footer related style start */


  /* responsive style media queries */
  /* Mobile devices related style */

  @media screen and (max-width: 576px) {
      .nav-section {
          flex-direction: column;
      }

      .menu-items {
          flex-direction: column;
      }

      .logo-text {
          margin-bottom: 20px;
      }

      .banner-container {
          flex-direction: column-reverse;
      }

      .banner-content {
          padding: 80px 20px 80px 20px;
      }

      .banner-image-container {
          padding-right: 0;
      }

      .online-card-container {
          flex-direction: column;
      }

      .play-container {
          flex-direction: column;
      }

      .play-content {
          width: 90%;
      }

      .paly-image {
          width: 100%;
      }

      .play-small-image {
          width: 50%;
          flex-shrink: 0;
          position: relative;
          top: -150px;
          left: -40px;
      }

      .icon-container {
          display: grid;
          grid-template-columns: repeat(2, 1fr);
      }



  }

  /* Tablet or medium devices related style */
  @media screen and (min-width:576px) and (max-width:960px) {
    .nav-section {
        flex-direction: column;
    }
    .banner-container {
        flex-direction: column-reverse;
    }
    .online-card-container{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    .play-container {
        flex-direction: column;
    }
    .play-small-image {
        width: 50%;
        flex-shrink: 0;
        position: relative;
        top: -150px;
        left: -40px;
    }
    .icon-container {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
    }

  }

